# spimov-mcp

./: .gitignore  CLAUDE.md  CONTENT.md  README.md  build_and_publish.py  pyproject.toml
.claude/agents/: mcp.md
src/spimov_mcp/: http_main.py  server.py  stdio_main.py
