[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spimov-mcp"
version = "0.2.0"
description = "Spimov MCP server — dub videos via Claude Desktop / Claude Code / any MCP client"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
spimov-mcp = "spimov_mcp.stdio_main:main"
spimov-mcp-http = "spimov_mcp.http_main:main"

[tool.setuptools.packages.find]
where = ["src"]
