[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spimov-mcp"
version = "0.6.0"
description = "Spimov MCP server — dub videos via Claude Desktop / Claude Code / any MCP client"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Spimov", email = "support@spimov.com" }]
keywords = ["mcp", "model-context-protocol", "dubbing", "video", "subtitles", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://spimov.com"
Repository = "https://github.com/spimov-ai/spimov-mcp"
Issues = "https://github.com/spimov-ai/spimov-mcp/issues"

[project.scripts]
spimov-mcp = "spimov_mcp.stdio_main:main"
spimov-mcp-http = "spimov_mcp.http_main:main"

[tool.setuptools.packages.find]
where = ["src"]
